(fix) : ensure patient search integration with HIE work on tablet devices

--- a/packages/esm-patient-search-app/src/ui-components/overlay/overlay.scss
+++ b/packages/esm-patient-search-app/src/ui-components/overlay/overlay.scss
@@ -22,7 +22,7 @@
   bottom: 0;
   left: 0;
   right: 0;
-  z-index: 9999;
+  z-index: 9;
   background-color: $ui-01;
   overflow: hidden;
   padding-top: layout.$spacing-09;
